getting rid of paragraph spacing--Lisa wants to do it manually--and fixing line height in sidebar

--- a/scss/layout/_sidebar.scss
+++ b/scss/layout/_sidebar.scss
@@ -1,5 +1,9 @@
 .sidebar {
 	display: none;
+
+	ul li {
+		line-height: 1.5;
+	}
 }
 
 .feed-link {
