--- a/scss/themes/_theme.scss
+++ b/scss/themes/_theme.scss
@@ -48,8 +48,12 @@ div {
 
 	 p {
 		 line-height: 2.0;
-		 margin-top: 20px;
+		 /*margin-top: 20px;*/
 		 font-family: "Open Sans", sans-serif;
+	 }
+
+	 h3 {
+		 margin-bottom: 20px;
 	 }
 
 	 a {
