--- a/style.css
+++ b/style.css
@@ -131,8 +131,11 @@ h4 {
 
 div .content-area p {
   line-height: 2.0;
-  margin-top: 20px;
+  /*margin-top: 20px;*/
   font-family: "Open Sans", sans-serif; }
+
+div .content-area h3 {
+  margin-bottom: 20px; }
 
 div .content-area a {
   color: #27b6df; }
@@ -496,6 +499,8 @@ footer {
 
 .sidebar {
   display: none; }
+  .sidebar ul li {
+    line-height: 1.5; }
 
 .feed-link {
   margin-top: 10px; }
